This file list changes done in each version of the CheckSum Tool.

CheckSum Tool 0.3.0
  Manual: Add initial version of user manual (in html format)
  Add manual item to Help-menu
  Rename About-menu to Help-menu
  BugFix: Don't add space to installer executable filename

CheckSum Tool 0.2.0 - 2007-12-18 (r57)
  Added current filename to program title
  Keep track of current filename, ask filename only if not previously selected
  Add menuitems for creating new file and saving file with new filename (save As)
  Added unit tests for SHA1-, MD5- and CRC32- calculation and verification
  Improved NAnt build file by reorganizing targets
  Added NAnt "distribution" target for building a distribution from SVN
  Bugfix: CRC32 sum was not calculated or verified correctly (found by unit tests)

CheckSum Tool 0.1.0 - 2007-12-04 (r37)
  First version added to the SourceForge.net
  Support for CRC32, MD5 and SHA-1 checksum types
  Can save list of checksums to file (simple CSV file)
  Can load a list of checksum from file (simple CSV file)
  Can verify filenames found from same folder against list of checksums
  Loads and saves CRC32-sums in .SFV files
  Loads and saves MD5-sums in .MD5 files
  Loads and saves SHA-1 sums in .SHA1 files
  Simple installer for installing files and creating start menu items
  Installer checks if .Net 2.0 is installed - and downloads and installs it if needed