@@ -4,6 +4,7 @@ CheckSum Tool 0.3.0
   Manual: Add initial version of user manual (in html format)
   Add manual item to Help-menu
   Rename About-menu to Help-menu
+  Try to detemine file's type from filename when opening checksum file
   BugFix: Don't add space to installer executable filename
 
 CheckSum Tool 0.2.0 - 2007-12-18 (r57)
